--- a/1.html
+++ b/1.html
@@ -1,12 +1,12 @@
 <!doctype html>
 <html>
 <head>
-  <title>Kyung Oh, best SNU hitter</title>
+  <title>Kyoung Oh, best SNU hitter</title>
   <meta charset="utf-8">
 </head>
 
 <body>
-  <h1><a href ="index.html"><font size = "100">All about Kyung Oh Kim</font></a></h1>
+  <h1><a href ="index.html"><font size = "100">All about Kyoung Oh Kim</font></a></h1>
   <ol>
     <li><a href="1.html"> Background</a></li>
     <li><a href="2.html"> Baseball Player</a></li>
@@ -17,7 +17,7 @@
   <h1>Background</h1>
 
   <p><img src="selfie1.jpg" width="25%">&nbsp;<img src="dig.jpg" width="25%">
-  <p>Kyung Oh was born in lovely family (dad, mom, 1 older brother).</p>
+  <p>Kyoung Oh was born in lovely family (dad, mom, 1 older brother).</p>
   <br>In high school, his nickname was
   "Diglett" (Digda, a character of pokemon) because he resembled it very much.
   <p>(See the picture above to certain it's not lie)</p>
