--- a/2.html
+++ b/2.html
@@ -1,12 +1,12 @@
 <!doctype html>
 <html>
 <head>
-  <title>Kyung Oh, best SNU hitter</title>
+  <title>Kyoung Oh, best SNU hitter</title>
   <meta charset="utf-8">
 </head>
 
 <body>
-  <h1><a href ="index.html"><font size = "100">All about Kyung Oh Kim</font></a></h1>
+  <h1><a href ="index.html"><font size = "100">All about Kyoung Oh Kim</font></a></h1>
   <ol>
     <li><a href="1.html"> Background</a></li>
     <li><a href="2.html"> Baseball Player</a></li>
@@ -19,9 +19,9 @@
 
     <ul>
       <li><font size = "5">Playboys</font>
-        <p>Kyung Oh started his baseball career at Playboys, a baseball club in SNU.
+        <p>Kyoung Oh started his baseball career at Playboys, a baseball club in SNU.
         <br>Although there are many other club, he chosse Playboys. Why?</p>
-        First, Playboys consists of students of material science, Kyung Oh's majore.
+        First, Playboys consists of students of material science, Kyoung Oh's majore.
         <br>Second, as you saw before, he is a big dick guy. He wanted many hot girls.</li>
       <p><li><font size = "5">SNU baseball team</font></p>
         Some senior members of playboys (Park,Ko,Han) recommended him to join the SNU baseball team with them.
@@ -30,13 +30,13 @@
         <p><li><font size = "5">Experience and Carrer in SNU baseball team</font> </p>
         He always did his best for team. For example, in a winter 2013-2014, SNU baseball team had to move the dirt-mountain required to maintain ground.
         <br>All players had been tired doing 'Sap-Jeel" a thousands of time. Someone cried, the other gave up, another wanted to exit the team.
-        <br>By the time, Kyung Oh stood up and did Sap-Jeel very fast. His speed was so intensive that it really lookeed like Digda.
-        <br>And before the crying man stop his crying, Kyung Oh finished all stuffs. And he save the team.
+        <br>By the time, Kyoung Oh stood up and did Sap-Jeel very fast. His speed was so intensive that it really lookeed like Digda.
+        <br>And before the crying man stop his crying, Kyoung Oh finished all stuffs. And he save the team.
         <p> There were so many legendary things that I couldn't all things because I have no space.</p>
         <p>Just remember this. He was the best hitter (4th, cleanup) at SNU in his last season.
         <br> One of the game, he had a chance to score. Before that game, he made many hits so it was his peak season.
         <br> But coach ordered him to make a bunt. All team member was supprised and embarassed.
-        <br> They expected him to make a hit. But Kyung Oh nodded his head camly. Everybody shut their mouse,
+        <br> They expected him to make a hit. But Kyoung Oh nodded his head camly. Everybody shut their mouse,
         <br> and he made perpect bunt. He sacrificed himself for team. Since that, he became a symbor of SNU. </p></li>
         <p><li><font size = "5">Career</font></p>
           <a href="http://www.korea-baseball.com/record/record/player_record?kind_cd=41&lig_idx=&group_no=&part_no=&record_type=1&season=2018&club_idx=149&person_no=201304002503&group_part_idx=" target="_blank" title="2018시즌 기록">a. SNU Baseball team</a>
