--- a/3.html
+++ b/3.html
@@ -1,12 +1,12 @@
 <!doctype html>
 <html>
 <head>
-  <title>Kyung Oh, best SNU hitter</title>
+  <title>Kyoung Oh, best SNU hitter</title>
   <meta charset="utf-8">
 </head>
 
 <body>
-  <h1><a href ="index.html"><font size = "100">All about Kyung Oh Kim</font></a></h1>
+  <h1><a href ="index.html"><font size = "100">All about Kyoung Oh Kim</font></a></h1>
   <ol>
     <li><a href="1.html"> Background</a></li>
     <li><a href="2.html"> Baseball Player</a></li>
