--- a/index.html
+++ b/index.html
@@ -1,12 +1,12 @@
 <!doctype html>
 <html>
 <head>
-  <title>Kyung Oh, best SNU hitter</title>
+  <title>Kyoung Oh, best SNU hitter</title>
   <meta charset="utf-8">
 </head>
 
 <body>
-  <h1><a href ="index.html"><font size = "100">All about Kyung Oh Kim</font></a></h1>
+  <h1><a href ="index.html"><font size = "100">All about Kyoung Oh Kim</font></a></h1>
   <ol>
     <li><a href="1.html"> Background</a></li>
     <li><a href="2.html"> Baseball Player</a></li>
@@ -14,15 +14,15 @@
 
   </ol>
 
-  <h1>Who is Kyung Oh?</h1>
+  <h1>Who is Kyoung Oh?</h1>
   <a href="https://www.ibighit.com/" target="_blank" title="bts shop">
-    Kyung Oh<a> was born at 1995 in Suwon, South Korea. He is a student of Seoul National University (SNU) and
+    Kyoung Oh<a> was born at 1995 in Suwon, South Korea. He is a student of Seoul National University (SNU) and
     like to play Starcraft with his friend.</font>
   <p>But you cannot know well by these informations.</p>
   <br>He is the most
   <font size = "80">Amazing, Crazy and Marjost Guy</font> among the world.</br>
   <p><font size = "5">Now, are you feeling to know more about him?
-  <br>It's time to be freind of Kyung-Oh.</br>
+  <br>It's time to be freind of Kyoung-Oh.</br>
   <br>Let's go!</br></font></p>
 
   <p><img src="index.jpg" width="50%"></p>
